[Bug #18937] Coerce non-real non-Numeric into Complex at comparisons