complex.c
@@ -1124,14 +1124,22 @@ nucomp_cmp(VALUE self, VALUE other)
     if (!k_numeric_p(other)) {
         return rb_num_coerce_cmp(self, other, idCmp);
     }
-    if (nucomp_real_p(self)) {
-        if (RB_TYPE_P(other, T_COMPLEX) && nucomp_real_p(other)) {
+    if (!nucomp_real_p(self)) {
+        return Qnil;
+    }
+    if (RB_TYPE_P(other, T_COMPLEX)) {
+        if (nucomp_real_p(other)) {
             get_dat2(self, other);
             return rb_funcall(adat->real, idCmp, 1, bdat->real);
         }
-        else if (f_real_p(other)) {
-            get_dat1(self);
+    }
+    else {
+        get_dat1(self);
+        if (f_real_p(other)) {
             return rb_funcall(dat->real, idCmp, 1, other);
+        }
+        else {
+            return rb_num_coerce_cmp(dat->real, other, idCmp);
         }
     }
     return Qnil;
